--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,17 @@
 .pop {
   height: 50px;
-  width: 40%;
   margin-left: 20px;
   border: 1px solid saddlebrown;
   display: flex;
   justify-content: center;
   align-items: center;
+
+}
+
+.cdk-drop-list-dragging .cdk-drag {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cdk-drag-animating {
+  transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
 }
